[gd_scene load_steps=11 format=3 uid="uid://cq61nvavqgljf"]

[ext_resource type="Script" path="res://Terminal/Menus/Button_Draft_Buy_Yes.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bqjgdgj18ydvn" path="res://Icons/Credit_Single.png" id="2"]
[ext_resource type="Script" path="res://Terminal/Menus/Menu_Draft_Buy.gd" id="3"]
[ext_resource type="Script" path="res://Terminal/Menus/Button_Draft_Buy_No.gd" id="4"]
[ext_resource type="Theme" uid="uid://db0q0rv6j8gcq" path="res://Terminal/Terminal_Theme.tres" id="5"]
[ext_resource type="Theme" uid="uid://elferpjtn4s7" path="res://Terminal/Terminal_Theme_Big.tres" id="6"]

[sub_resource type="CanvasTexture" id="CanvasTexture_i7uyv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6y4rh"]
texture = SubResource("CanvasTexture_i7uyv")
modulate_color = Color(0, 0, 0, 0.941176)

[sub_resource type="Animation" id="1"]
resource_name = "New Anim"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.854902, 0.537255, 1), Color(1, 0.337255, 0.337255, 1), Color(1, 0.835294, 0.470588, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sulvy"]
_data = {
"New Anim": SubResource("1")
}

[node name="Menu_Draft_Buy" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1479.0
offset_bottom = -784.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6y4rh")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6")
text = "BUY"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/VBoxContainer/Label"]
libraries = {
"": SubResource("AnimationLibrary_sulvy")
}
autoplay = "New Anim"

[node name="Label_Item_Name" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6")
text = "ITEM NAME"
horizontal_alignment = 1

[node name="Label_Item_Name2" type="Label" parent="PanelContainer/VBoxContainer/Label_Item_Name"]
modulate = Color(1, 1, 1, 0.270588)
layout_mode = 0
theme = ExtResource("6")
text = "ITEM NAME"
horizontal_alignment = 1

[node name="Price" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Price"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 5
stretch_mode = 4

[node name="Label_Item_Price" type="Label" parent="PanelContainer/VBoxContainer/Price"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "1000"
horizontal_alignment = 1

[node name="Button_Draft_Buy_Yes" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
text = "YES"
script = ExtResource("1")

[node name="Button_Draft_Buy_No" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
text = "NO"
script = ExtResource("4")
